--- a/frontend/nevvel/package.json
+++ b/frontend/nevvel/package.json
@@ -25,7 +25,8 @@
     "styled-components": "^5.3.10",
     "styled-reset": "^4.4.6",
     "swiper": "^9.2.4",
-    "typescript": "5.0.4"
+    "typescript": "5.0.4",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/styled-components": "^5.1.26",
