--- a/.github/workflows/frontend_deploy.yml
+++ b/.github/workflows/frontend_deploy.yml
@@ -11,7 +11,9 @@ on:
 jobs:
   docker:
     runs-on: ubuntu-20.04
-
+    defaults:
+      run:
+        working-directory: "./frontend/nevvel"
     steps:
       - name: Checkout
         uses: actions/checkout@v3
