chore: 자동빌드 배포를 위한 파일추가
- github action을 위한 yml 파일추가
- aws 컨테이너 배포를 위한 container.template.json 파일추가
- Dockerfile에서 잘못된 부분 수정

--- a/frontend/nevvel/Dockerfile
+++ b/frontend/nevvel/Dockerfile
@@ -2,8 +2,10 @@ FROM node:18.15.0 AS base
 
 WORKDIR /home/ubuntu/frontend
 
+COPY ./package*.json ./
+RUN npm install
 COPY ./ ./
-
+RUN chmod 755 -R ./node_modules
 RUN npm run build
 
 EXPOSE 3000
