--- a/frontend/nevvel/package.json
+++ b/frontend/nevvel/package.json
@@ -19,6 +19,7 @@
     "jotai": "^2.0.4",
     "next": "13.3.1",
     "react": "18.2.0",
+    "react-contenteditable": "^3.3.7",
     "react-day-picker": "^8.7.1",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
