chore: 도커파일 경로 태그 변경

--- a/.github/workflows/frontend_deploy.yml
+++ b/.github/workflows/frontend_deploy.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Docker Push
         uses: docker/build-push-action@v4
         with:
-          context: ./frontend/nevvel
+          file: /frontend/nevvel
           push: true
           tags: hokyun/frontend:latest
 
