chore: 경로에 도커파일 추가

--- a/.github/workflows/frontend_deploy.yml
+++ b/.github/workflows/frontend_deploy.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Docker Push
         uses: docker/build-push-action@v4
         with:
-          file: /frontend/nevvel
+          file: /frontend/nevvel/Dockerfile
           push: true
           tags: hokyun/frontend:latest
 
