chore: 도커 파일 내부에 프론트엔드 프로젝트 경로 변경

--- a/frontend/nevvel/Dockerfile
+++ b/frontend/nevvel/Dockerfile
@@ -4,7 +4,7 @@ WORKDIR /home/ubuntu/frontend
 
 COPY ./frontend/nevvel/package*.json ./
 RUN npm install
-COPY ./ ./
+COPY ./frontend/nevvel/ ./
 RUN chmod 755 -R ./node_modules
 RUN npm run build
 
