--- a/.github/workflows/frontend_deploy.yml
+++ b/.github/workflows/frontend_deploy.yml
@@ -15,6 +15,9 @@ jobs:
       run:
         working-directory: "frontend/nevvel"
     steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+        
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
         
