--- a/frontend/nevvel/package.json
+++ b/frontend/nevvel/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@atlaskit/css-reset": "^6.5.3",
     "@next/bundle-analyzer": "^13.3.1",
     "@types/node": "18.16.0",
     "@types/react": "18.0.38",
+    "@types/react-beautiful-dnd": "^13.1.4",
     "@types/react-dom": "18.0.11",
     "axios": "^1.4.0",
     "cookie": "^0.5.0",
@@ -19,6 +21,7 @@
     "jotai": "^2.0.4",
     "next": "13.3.1",
     "react": "18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-contenteditable": "^3.3.7",
     "react-day-picker": "^8.7.1",
     "react-dom": "18.2.0",
