chore: 워킹디렉토리 겅려 수정

--- a/.github/workflows/backend_deploy.yml
+++ b/.github/workflows/backend_deploy.yml
@@ -21,6 +21,9 @@ jobs:
   deploy:
     runs-on: ubuntu-20.04
     environment: production
+    defaults:
+      run:
+        working-directory: "backend/novvel"
 
     steps:
     - name: Checkout
