--- a/.github/workflows/backend_deploy.yml
+++ b/.github/workflows/backend_deploy.yml
@@ -38,6 +38,7 @@ jobs:
     - name: Build with Gradle
       uses: gradle/gradle-build-action@v2
       with:
+        gradle-version: 7.6.1
         arguments: build
 
     - name: Configure AWS credentials
