--- a/.github/workflows/backend_deploy.yml
+++ b/.github/workflows/backend_deploy.yml
@@ -40,6 +40,7 @@ jobs:
       with:
         gradle-version: 7.6.1
         arguments: build
+        build-root-directory: backend/novvel
 
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
