--- a/backend/novvel/appspec.yml
+++ b/backend/novvel/appspec.yml
@@ -2,7 +2,7 @@ version: 0.0
 os: linux
 
 files:
-  - source:  ./spring-webapp-0.0.1.jar
+  - source:  /build/libs/spring-webapp-0.0.1.jar
     destination: /home/ubuntu
     overwrite: yes
 
