--- a/frontend/nevvel/package.json
+++ b/frontend/nevvel/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.4.0",
     "cookie": "^0.5.0",
     "date-fns": "^2.30.0",
+    "dompurify": "^3.0.5",
     "jotai": "^2.0.4",
     "next": "13.3.1",
     "react": "18.2.0",
@@ -32,6 +33,7 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@types/dompurify": "^3.0.2",
     "@types/styled-components": "^5.1.26",
     "babel-plugin-styled-components": "^2.1.1"
   }
