refac: getServerSideProps .env파일 리팩토링

--- a/frontend/nevvel/.env
+++ b/frontend/nevvel/.env
@@ -1,2 +1,4 @@
 NEXT_PUBLIC_API_BASE_URL=https://www.nevvel.net:8081/api
 NEXT_PUBLIC_KAKAO_LOGIN_URL=https://www.nevvel.net:8081/api/oauth2/authorization/kakao
+API_COVER_URL=https://www.nevvel.net:8081/api/covers
+API_ASSET_URL=https://www.nevvel.net:8081/api/assets
